@@ -440,84 +440,6 @@ sub findrecipe {
   return $recipe;
 }
 
-=item B<inout>
-
-Method to return the current input filename and the 
-new output filename given a suffix and a sub-instrument
-number.
-
-Returns $in and $out in an array context:
-
-  ($in, $out) = $Frm->inout($suffix, $num);
-
-Returns $out in a scalar context:
-
-  $out = $Frm->inout($suffix, $num);
-
-The second argument indicates the sub-instrument number
-and is optional (defaults to first sub-instrument).
-If only one file is present then that is used as $infile.
-(handled by the file() method.)
-
-Currently, the output filename is constructed by removing
-everything after the last underscore and appending the suffix.
-If no underscore is found the suffix is appended without chopping.
-If the string after the last underscore is simply a number,
-it is not removed.
-
-Some examples (suffix = '_trn'):
-
-If input equals "o65" the output filename will be "o65_trn".
-If input equals "o65_flat" the output filename will be "o65_trn".
-If input equals "19980123_dem_0065" the output filename will be
-"19980123_dem_0065_trn".
-
-=cut
-
-sub inout {
-  my $num;
-
-  my $self = shift;
-
-  my $suffix = shift;
-
-  # Find the sub-instrument number
-  if (@_) {
-    $num = shift;
-  } else {
-    $num = 1;
-  }
-
-  # Read the current file name
-  my $infile = $self->file($num);
-
-  # Split on underscore
-  my @junk = split(/_/, $infile);
-
-  # Now construct the root for outfile
-  # Keep the original root if we have only 1 component
-  # or the last component is a number.
-  # Else throw away the last one
-
-  my $outfile;
-  if ($#junk == 0 || $junk[-1] =~ /^\d+$/) {
-    $outfile = $infile;
-  } else {
-    # Recombine array all except last entry
-    $outfile = join("_",@junk[0..$#junk-1]);
-  }
-
-  $outfile .= $suffix;
-
-  # Generate a warning if output file equals input file
-  orac_warn("inout - output filename equals input filename ($outfile)")
-    if ($outfile eq $infile);
-
-  return ($infile, $outfile) if wantarray;
-  return $outfile;
-}
-
-
 =item B<template>
 
 This method is identical to the base class template method
