@@ -1,5 +1,7 @@
 2001-02-01  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Frame/JCMT.pm: Can  use base class inout() method
+
 	* Recipe.pm (_check_obey_status_string): Handle { "mon" } syntax
 	for hash key. Make sure that the monolith name is reasonable
 	before using delete.
